[gd_scene load_steps=5 format=3 uid="uid://cj7wfgkjc0d1d"]

[ext_resource type="Script" uid="uid://5p3sgck3wa2o" path="res://Scripts/arrow.gd" id="1_xg5tt"]
[ext_resource type="PackedScene" uid="uid://2jxay3aa14a5" path="res://Scenes/Sprites/bat.tscn" id="2_idefw"]
[ext_resource type="Texture2D" uid="uid://drgewnoowohcv" path="res://Assets/Sprites/Elf/projectiles_and_effects/arrow/arrow_.png" id="2_v7w0e"]

[sub_resource type="SeparationRayShape2D" id="SeparationRayShape2D_idefw"]
length = 34.9665

[node name="Arrow" type="Area2D"]
position = Vector2(-4, 0)
collision_layer = 4
collision_mask = 4
script = ExtResource("1_xg5tt")
Ref_bat = ExtResource("2_idefw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_v7w0e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-17, -2.84217e-14)
rotation = -1.57124
shape = SubResource("SeparationRayShape2D_idefw")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1, 3.8147e-06)
scale = Vector2(1.65, 0.3)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
